@@ -10,10 +10,12 @@
  *******************************************************************************/
 package com.ibm.ws.kernel.boot.internal.commands;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
+import java.io.FileReader;
 import java.io.IOException;
 import java.text.MessageFormat;
 import java.util.ArrayList;
@@ -72,7 +74,7 @@ public class PackageProcessor implements ArchiveProcessor {
     final String wlpProperty = "/lib/versions/WebSphereApplicationServer.properties";
     final String wlpPropertyBackup = "WebSphereApplicationServer.properties.bak";
 
-    private static final String PACKAGE_ARCHIVE_PREFIX = "wlp/";
+    protected static final String PACKAGE_ARCHIVE_PREFIX = "wlp/";
     public String packageArchiveEntryPrefix = PACKAGE_ARCHIVE_PREFIX;
 
     public boolean isServerRootOptionSet = false;
@@ -131,7 +133,9 @@ public class PackageProcessor implements ArchiveProcessor {
         mf.getMainAttributes().putValue("Extract-Installer", "false");
 
         File newMani = new File(workAreaTmpDir, "MANIFEST.usrinclude.tmp");
-        mf.write(new FileOutputStream(newMani));
+        try (FileOutputStream out = new FileOutputStream(newMani)) {
+            mf.write(out);
+        }
 
         return newMani;
     }
@@ -168,8 +172,17 @@ public class PackageProcessor implements ArchiveProcessor {
         mf.getMainAttributes().putValue("Main-Class", "wlp.lib.extract.SelfExtractRun");
         mf.getMainAttributes().putValue("Server-Name", processName);
 
+        // For Java 9, we need to apply the /wlp/lib/platform/java/java9.options to the manifest.
+        if (System.getProperty("java.specification.version") != null && !System.getProperty("java.specification.version").startsWith("1.")) {
+            HashMap<String, String> map = readJava9Options();
+            mf.getMainAttributes().putValue("Add-Exports", map.get("exports"));
+            mf.getMainAttributes().putValue("Add-Opens", map.get("opens"));
+        }
+
         File newMani = new File(workAreaTmpDir, "MANIFEST.usrinclude.tmp");
-        mf.write(new FileOutputStream(newMani));
+        try (FileOutputStream out = new FileOutputStream(newMani)) {
+            mf.write(out);
+        }
 
         return newMani;
     }
@@ -181,10 +194,18 @@ public class PackageProcessor implements ArchiveProcessor {
             return rc;
         }
         try {
+
+            // Dont allow --include=usr and --archive=*.jar combination
+            if (isIncludeOptionEqualToUsr() && isArchiveJar()) {
+                System.out.println(MessageFormat.format(BootstrapConstants.messages.getString("error.package.usr.jar"), processName));
+                return ReturnCode.ERROR_SERVER_PACKAGE;
+            }
+
             // Create the default archive
-            archive = ArchiveFactory.create(packageFile);
+            archive = ArchiveFactory.create(packageFile, java2SecurityEnabled());
+
             // for a Jar archive, the manifest must be first.
-            if (packageFile.getName().endsWith(".jar")) {
+            if (isArchiveJar()) {
                 File manifest = new File(bootProps.getInstallRoot(), "lib/extract/META-INF/MANIFEST.MF");
                 if (!manifest.exists()) {
                     //maybe user didnt extract file with jar -jar, but unzipped..
@@ -519,6 +540,7 @@ public class PackageProcessor implements ArchiveProcessor {
             entryConfigs.add(serverSharedDirConfig);
             // exclude security sensitive files
             serverSharedDirConfig.exclude(Pattern.compile(REGEX_SEPARATOR + "resources" + REGEX_SEPARATOR + "security" + REGEX_SEPARATOR + "key.jks"));
+            serverSharedDirConfig.exclude(Pattern.compile(REGEX_SEPARATOR + "resources" + REGEX_SEPARATOR + "security" + REGEX_SEPARATOR + "key.p12"));
 
             /*
              * exclude loose xml files from shared directory
@@ -589,8 +611,9 @@ public class PackageProcessor implements ArchiveProcessor {
                 looseConfig = ProcessorUtils.convertToLooseConfig(lf);
                 if (looseConfig != null) {
                     try {
-                        ArchiveEntryConfig looseArchiveEntryConfig = ProcessorUtils.createLooseArchiveEntryConfig(looseConfig, lf, bootProps, packageArchiveEntryPrefix);
-                        entryConfigs.add(looseArchiveEntryConfig);
+                        entryConfigs.addAll(ProcessorUtils.createLooseExpandedArchiveEntryConfigs(looseConfig, lf, bootProps, packageArchiveEntryPrefix,
+                                                                                                  includeUsr(options.get(PackageOption.INCLUDE))));
+
                     } catch (FileNotFoundException e) {
                         // If any exception occurs when creating loose file archive, just skip it and create the next one.
                         System.out.println(MessageFormat.format(BootstrapConstants.messages.getString("warning.unableToPackageLooseConfigFileMissingPath"), lf));
@@ -601,13 +624,12 @@ public class PackageProcessor implements ArchiveProcessor {
                     it.remove();
                 }
             } catch (Exception e) {
-                // If any exception occurs when parse loose file, just skip it and parse next loose file.
+                // If any exception occurs when parsing a loose file, just skip it and parse next loose file.
                 System.out.println(MessageFormat.format(BootstrapConstants.messages.getString("warn.package.invalid.looseFile"), lf));
                 Debug.printStackTrace(e);
                 it.remove();
             }
         }
-
     }
 
     private ReturnCode restoreWebSphereApplicationServerProperty(File wlpRoot) {
@@ -708,6 +730,7 @@ public class PackageProcessor implements ArchiveProcessor {
     // include option values
     public enum IncludeOption {
         ALL("all"), USR("usr"), MINIFY("minify"), WLP("wlp"), RUNNABLE("runnable");
+
         private final String value;
 
         private IncludeOption(String value) {
@@ -743,5 +766,53 @@ public class PackageProcessor implements ArchiveProcessor {
     public void setArchivePrefix(String prefix) {
         packageArchiveEntryPrefix = prefix + "/";
         isServerRootOptionSet = true;
+    }
+
+    // Check if Java 2 Security is enabled
+    private boolean java2SecurityEnabled() {
+        SecurityManager sm = System.getSecurityManager();
+        if (sm != null)
+            return true;
+        else
+            return false;
+    }
+
+    private boolean isArchiveJar() {
+        return packageFile.getName().endsWith(".jar");
+    }
+
+    // Reads the java9.options file
+    private HashMap<String, String> readJava9Options() throws IOException {
+        HashMap<String, String> hm = new HashMap<String, String>();
+        StringBuffer exports = new StringBuffer();
+        StringBuffer opens = new StringBuffer();
+        BufferedReader r = new BufferedReader(new FileReader(installRoot.getAbsolutePath() + File.separator + "lib" + File.separator + "platform" + File.separator + "java"
+                                                             + File.separator
+                                                             + "java9.options"));
+        String line = r.readLine();
+        while (line != null) {
+            if (!line.startsWith("#")) {
+                if (line.contains("--add-export")) {
+                    line = r.readLine();
+                    exports.append(getValue(line) + " ");
+                } else if (line.contains("--add-open")) {
+                    line = r.readLine();
+                    opens.append(getValue(line) + " ");
+                }
+            }
+            line = r.readLine();
+        }
+
+        hm.put("exports", exports.toString().trim());
+        hm.put("opens", opens.toString().trim());
+
+        r.close();
+
+        return hm;
+    }
+
+    private String getValue(String line) {
+        int loc = line.indexOf("=");
+        return line.substring(0, loc);
     }
 }
