@@ -31,6 +31,7 @@ import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
+import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
@@ -479,7 +480,7 @@ public class RestClient extends AbstractRepositoryClient implements RepositoryRe
         if (attachment.getLinkType() == AttachmentLinkType.DIRECT) {
             if ((loginInfo.getAttachmentBasicAuthUserId() != null) && (loginInfo.getAttachmentBasicAuthPassword() != null)) {
                 String userpass = loginInfo.getAttachmentBasicAuthUserId() + ":" + loginInfo.getAttachmentBasicAuthPassword();
-                String basicAuth = "Basic " + javax.xml.bind.DatatypeConverter.printBase64Binary(userpass.getBytes(Charset.forName("UTF-8")));
+                String basicAuth = "Basic " + encode(userpass.getBytes(Charset.forName("UTF-8")));
                 connection.setRequestProperty("Authorization", basicAuth);
             }
         }
@@ -1050,21 +1051,11 @@ public class RestClient extends AbstractRepositoryClient implements RepositoryRe
     }
 
     /**
-     * Print the base 64 string differently depending on JDK level because
-     * on JDK 7/8 we have JAX-B, and on JDK 8+ we have java.util.Base64
+     * Print the base 64 string
      */
     private static String encode(byte[] bytes) {
         try {
-            if (System.getProperty("java.version").startsWith("1.")) {
-                // return DatatypeConverter.printBase64Binary(str);
-                Class<?> DatatypeConverter = Class.forName("javax.xml.bind.DatatypeConverter");
-                return (String) DatatypeConverter.getMethod("printBase64Binary", byte[].class).invoke(null, bytes);
-            } else {
-                // return Base64.getEncoder().encode();
-                Class<?> Base64 = Class.forName("java.util.Base64");
-                Object encodeObject = Base64.getMethod("getEncoder").invoke(null);
-                return (String) encodeObject.getClass().getMethod("encodeToString", byte[].class).invoke(encodeObject, bytes);
-            }
+            return Base64.getEncoder().encodeToString(bytes);
         } catch (Exception e) {
             return null;
         }
